raspberry_pi/manipulator/log/build_2023-11-12_21-38-46/open_manipulator_x_teleop/stderr.log
  File "/home/noma/FINAL_ws/manipulator/install/open_manipulator_x_teleop/lib/python3.10/site-packages/open_manipulator_x_teleop/script/teleop_keyboard.py", line 306
    teleop_keyboard.send_goal_joint_space(pathtime)e[4] = prev_goal_joint_angle[4] + 0.002
                                                   ^
SyntaxError: invalid syntax

